--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": ">=5.6.0"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "zapier-platform-core": "8.4.2"
   },
   "devDependencies": {
