--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "zapier-platform-core": "8.4.2"
   },
   "devDependencies": {
