--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   "license": "BSD-3-Clause",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive"
+    "test": "mocha --recursive src/test",
+    "lint": "eslint --fix src",
+    "build": "babel src -d lib",
+    "zapier-test": "zapier test",
+    "zapier-build": "",
+    "push": "zapier push"
   },
   "engines": {
-    "node": ">=8.10.0",
+    "node": ">=10.16.3",
     "npm": ">=5.6.0"
   },
   "dependencies": {
@@ -20,6 +25,13 @@
     "zapier-platform-core": "8.4.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@zapier/eslint-plugin-zapier": "^9.1.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.1",
     "mocha": "^6.2.2",
     "should": "^13.2.0"
   },
