--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "zapier-platform-core": "8.4.2"
+    "zapier-platform-core": "^9.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
