--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive src/test",
-    "lint": "eslint --fix src",
+    "lint": "eslint src",
+    "lint-fix": "eslint --fix src",
     "build": "babel src -d lib",
     "zapier-test": "zapier test --debug",
     "zapier-build": "zapier build --debug",
