Implement add to playlist

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,4 +12,7 @@
   "[javascriptreact]": {
     "editor.formatOnSave": false,
   },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
 }
