--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,5 @@
   "plugins": [
     "@babel/plugin-proposal-optional-chaining",
   ],
-  "presets": [
-    ["@babel/env", { "targets": { "node": 10 } }],
-  ]
+  "presets": ["@zapier/babel-preset-zapier"]
 }
