--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "zapier-platform-core": "10.0.0"
+    "zapier-platform-core": "^10.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
     "@babel/plugin-proposal-optional-chaining": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
-    "@zapier/eslint-plugin-zapier": "^9.1.0",
+    "@zapier/babel-preset-zapier": "^6.2.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.1.0",
     "mocha": "^7.2.0",
     "should": "^13.2.3"
   },
