--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "zapier-platform-core": "^10.0.0"
+    "zapier-platform-core": "10.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
